--- a/thanks.html
+++ b/thanks.html
@@ -45,7 +45,7 @@
                         <h1 class="text-primary mt-2">Ezequiel Duré</h1>
                         <div class="mb-4" style="height: 22px;">
                             <h4 class="typed-text-output d-inline-block text-light"></h4>
-                            <div class="typed-text d-none">Full Stack Developer, Sys Admin</div>
+                            <div class="typed-text d-none">Full Stack Developer, Network Engineer</div>
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/ezequiel-dur%C3%A9-1b988a206/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
@@ -61,7 +61,7 @@
                     <!-- About Start -->
                     <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                         <h1 class="title pb-3 mb-5">About Me</h1>
-                        <p>Hi, my name is Ezequiel, I'm a systems degree student and passionate about everything related to technology. I am currently working as a freelance in web development. I love working as a team on interesting projects and walking the path to achieve the proposed objectives. I consider myself a person eager to learn new things and to apply them to my stack of knowledge learned all these years.</p>
+                        <p>I am a student of the degree in computer science and I also take courses in programming and computer networks. In the professional field, I carry out computer network consulting for companies, web page development and I also work as a freelancer in corporate events doing streamings and IT services. My main objective is to solidify my knowledge and continue incorporating new skills to have a more complete profile.</p>
                         <div class="row mb-4">
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Name:</span> Ezequiel Duré
@@ -73,7 +73,7 @@
                                 <span class="fw-medium text-primary">Degree:</span> Computer Science Degree in progress
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Experience:</span> 7 Years
+                                <span class="fw-medium text-primary">Experience:</span> 10 Years
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Phone:</span> +5411- 21582109
@@ -91,7 +91,7 @@
                         <div class="row g-4">
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">7</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">10</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Years of</p>
                                         <h5 class="mb-0">Experience</h5>
@@ -100,7 +100,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">24</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">64</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Happy</p>
                                         <h5 class="mb-0">Clients</h5>
@@ -109,7 +109,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">24</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">64</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Complete</p>
                                         <h5 class="mb-0">Projects</h5>
@@ -146,7 +146,7 @@
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
                                         <p class="mb-2">Javascript</p>
-                                        <p class="mb-2">80%</p>
+                                        <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
                                         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -277,47 +277,47 @@
                                             <img class="img-fluid w-100" src="img/portfolio-1.png" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                                 <a href="img/portfolio-1.png" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Ms Trader</i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-4 portfolio-item first">
-                                        <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-2.png" alt="">
-                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-2.png" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Unitec TV</i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-4 portfolio-item first">
-                                        <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-3.png" alt="">
-                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-3.png" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Center Price</i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-4 portfolio-item first">
-                                        <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-4.png" alt="">
-                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-4.png" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Nar Desarrollos</i>
+                                                    <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
+                                            <img class="img-fluid w-100" src="img/portfolio-2.jpeg" alt="">
+                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                                <a href="img/portfolio-2.jpeg" data-lightbox="portfolio">
+                                                    <i class="bi bi-plus text-light"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-4 portfolio-item first">
+                                        <div class="position-relative overflow-hidden mb-2">
+                                            <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
+                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                                <a href="img/portfolio-3.jpg" data-lightbox="portfolio">
+                                                    <i class="bi bi-plus text-light"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-4 portfolio-item first">
+                                        <div class="position-relative overflow-hidden mb-2">
+                                            <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
+                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
+                                                <a href="img/portfolio-4.jpg" data-lightbox="portfolio">
+                                                    <i class="bi bi-plus text-light"></i>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6 mb-4 portfolio-item first">
+                                        <div class="position-relative overflow-hidden mb-2">
                                             <img class="img-fluid w-100" src="img/portfolio-5.jpeg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                                 <a href="img/portfolio-5.jpeg" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Admin Wifi 350pax</i>
+                                                    <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -327,27 +327,7 @@
                                             <img class="img-fluid w-100" src="img/portfolio-6.jpeg" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                                 <a href="img/portfolio-6.jpeg" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Setup Mikrotik</i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-4 portfolio-item second">
-                                        <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-7.png" alt="">
-                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-7.png" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Fiber optic connections</i>
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6 mb-4 portfolio-item second">
-                                        <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-8.png" alt="">
-                                            <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-8.png" data-lightbox="portfolio">
-                                                    <i class="fs-4 text-light">Datacenter</i>
+                                                    <i class="bi bi-plus text-light"></i>
                                                 </a>
                                             </div>
                                         </div>
@@ -362,40 +342,8 @@
                     <!-- Contact Start -->
                     <section class="py-5 wow fadeInUp" data-wow-delay="0.1s" id="contact">
                         <h1 class="title pb-3 mb-5">Contact Me</h1>
-						<p class="mb-4">Contact me so we can work together on new projects.</p>
-                        <form action="https://formsubmit.co/ezequieldure.it@gmail.com" method="POST">
-                            <div class="row g-3">
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0 bg-secondary" name= "name" id="name" placeholder="Your Name" required>
-                                        <label for="name">Your Name</label>
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-floating">
-                                        <input type="email" class="form-control border-0 bg-secondary" id="email" name= "email" placeholder="Your Email" required>
-                                        <label for="email">Your Email</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <input type="text" class="form-control border-0 bg-secondary" id="subject" name= "subject" placeholder="Subject" required>
-                                        <label for="subject">Subject</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <div class="form-floating">
-                                        <textarea class="form-control border-0 bg-secondary" name= "message" placeholder="Leave a message here" id="message" style="height: 200px"></textarea>
-                                        <label for="message">Message</label>
-                                    </div>
-                                </div>
-                                <div class="col-12">
-                                    <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
-                                </div>
-                            </div>
-                            <input type="hidden" name="_next" value="https://cvezequieldure.vercel.com/thanks.html">
-                            <input type="hidden" name="_template" value="table">
-                        </form>
+						<p class="mb-4">Thanks for contacting me. I will contact you shortly..</p>
+                        
                     </section>
                     <!-- Contact End -->
 
