--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
                                 <h5 class="mb-1">Web Designer</h5>
-                                <p class="mb-2">Dataflow Services | <small>2000 - 2050</small></p>
+                                <p class="mb-2">Dataflow Services | <small>2022 - Present</small></p>
                                 <p>Development of medium and high demand web pages for corporate and social events.</p>
                             </div>
                         </div>
