--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                     <button class="btn btn-primary w-100 py-3" type="submit">Send Message</button>
                                 </div>
                             </div>
-                            <input type="hidden" name="_next" value="https://cvezequieldure.vercel.com/thanks.html">
+                            <input type="hidden" name="_next" value="https://cvezequieldure.vercel.app/thanks.html">
                             <input type="hidden" name="_template" value="table">
                         </form>
                     </section>
