--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="skill mb-4">
@@ -149,7 +149,7 @@
                                         <p class="mb-2">80%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                             </div>
@@ -160,7 +160,7 @@
                                         <p class="mb-2">90%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="skill mb-4">
@@ -169,7 +169,7 @@
                                         <p class="mb-2">95%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-success" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 <div class="skill mb-4">
@@ -178,7 +178,7 @@
                                         <p class="mb-2">85%</p>
                                     </div>
                                     <div class="progress">
-                                        <div class="progress-bar bg-info" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
                                 
@@ -406,7 +406,7 @@
                                 <a class="btn btn-primary btn-square mx-1" href="https://www.linkedin.com/in/ezequiel-dur%C3%A9-1b988a206/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                                 <a class="btn btn-primary btn-square mx-1" href="https://www.instagram.com/ezedure/" target="_blank"><i class="fab fa-instagram"></i></a>
                             </div>    
-							<p class="m-0">&copy; Developed for my portfolio</p>
+							<p class="m-0">&copy; Developed for my CV.</p>
                         </div>
                     </section>
                     <!-- Footer End -->
