--- a/thanks.html
+++ b/thanks.html
@@ -73,7 +73,7 @@
                                 <span class="fw-medium text-primary">Degree:</span> Computer Science Degree in progress
                             </div>
                             <div class="col-sm-6 py-1">
-                                <span class="fw-medium text-primary">Experience:</span> 7 Years
+                                <span class="fw-medium text-primary">Experience:</span> 12 Years
                             </div>
                             <div class="col-sm-6 py-1">
                                 <span class="fw-medium text-primary">Phone:</span> +5411- 21582109
@@ -91,7 +91,7 @@
                         <div class="row g-4">
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">7</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">12</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Years of</p>
                                         <h5 class="mb-0">Experience</h5>
@@ -100,7 +100,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">24</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">64</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Happy</p>
                                         <h5 class="mb-0">Clients</h5>
@@ -109,7 +109,7 @@
                             </div>
                             <div class="col-md-4 col-lg-6 col-xl-4">
                                 <div class="d-flex bg-secondary p-4">
-                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">24</h1>
+                                    <h1 class="flex-shrink-0 display-5 text-primary mb-0" data-toggle="counter-up">64</h1>
                                     <div class="ps-3">
                                         <p class="mb-0">Complete</p>
                                         <h5 class="mb-0">Projects</h5>
@@ -212,7 +212,7 @@
                             </div>
                             <div class="position-relative mb-4">
                                 <span class="bi bi-arrow-right fs-4 text-light position-absolute" style="top: -5px; left: -50px;"></span>
-                                <h5 class="mb-1">Web Designer</h5>
+                                <h5 class="mb-1">Web Developer</h5>
                                 <p class="mb-2">Dataflow Services | <small>2022 - Present</small></p>
                                 <p>Development of medium and high demand web pages for corporate and social events.</p>
                             </div>
@@ -274,9 +274,9 @@
                                 <div class="row portfolio-container">
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-1.png" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-1.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-1.png" data-lightbox="portfolio">
+                                                <a href="img/portfolio-1.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Ms Trader</i>
                                                 </a>
                                             </div>
@@ -284,9 +284,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-2.png" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-2.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-2.png" data-lightbox="portfolio">
+                                                <a href="img/portfolio-2.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Unitec TV</i>
                                                 </a>
                                             </div>
@@ -294,9 +294,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-3.png" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-3.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-3.png" data-lightbox="portfolio">
+                                                <a href="img/portfolio-3.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Center Price</i>
                                                 </a>
                                             </div>
@@ -304,9 +304,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item first">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-4.png" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-4.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-4.png" data-lightbox="portfolio">
+                                                <a href="img/portfolio-4.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Nar Desarrollos</i>
                                                 </a>
                                             </div>
@@ -314,9 +314,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-5.jpeg" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-5.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-5.jpeg" data-lightbox="portfolio">
+                                                <a href="img/portfolio-5.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Admin Wifi 350pax</i>
                                                 </a>
                                             </div>
@@ -324,9 +324,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-6.jpeg" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-6.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-6.jpeg" data-lightbox="portfolio">
+                                                <a href="img/portfolio-6.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Setup Mikrotik</i>
                                                 </a>
                                             </div>
@@ -334,9 +334,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-7.png" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-7.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-7.png" data-lightbox="portfolio">
+                                                <a href="img/portfolio-7.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Fiber optic connections</i>
                                                 </a>
                                             </div>
@@ -344,9 +344,9 @@
                                     </div>
                                     <div class="col-md-6 mb-4 portfolio-item second">
                                         <div class="position-relative overflow-hidden mb-2">
-                                            <img class="img-fluid w-100" src="img/portfolio-8.png" alt="">
+                                            <img class="img-fluid w-100" src="img/portfolio-8.webp" alt="">
                                             <div class="portfolio-btn d-flex align-items-center justify-content-center">
-                                                <a href="img/portfolio-8.png" data-lightbox="portfolio">
+                                                <a href="img/portfolio-8.webp" data-lightbox="portfolio">
                                                     <i class="fs-4 text-light">Datacenter</i>
                                                 </a>
                                             </div>
