Actualizacion de datos personales

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </div>
                         <div class="d-flex justify-content-center mt-auto mb-3">
                             <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/ezequiel-dur%C3%A9-1b988a206/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/ezedure/" target="_blank"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-secondary btn-square mx-1" href="https://github.com/ezequieldureit" target="_blank"><i class="fab fa-github"></i></a>
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
                             <a href="https://drive.google.com/file/d/1g296DgkUq30rtpPIEDhUkmtJC4ruhAQZ/view?usp=sharing" target="_blank" class="btn w-50 border-end">Download CV</a>
@@ -385,7 +385,7 @@
                         <div class="bg-secondary text-light text-center p-5">
                             <div class="d-flex justify-content-center mb-4">
                                 <a class="btn btn-primary btn-square mx-1" href="https://www.linkedin.com/in/ezequiel-dur%C3%A9-1b988a206/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                                <a class="btn btn-primary btn-square mx-1" href="https://www.instagram.com/ezedure/" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a class="btn btn-primary btn-square mx-1" href="https://github.com/ezequieldureit" target="_blank"><i class="fab fa-github"></i></a>
                             </div>    
 							<p class="m-0">&copy; Developed for my CV.</p>
                         </div>
