Actualizacion de servicios 2023

--- a/index.html
+++ b/index.html
@@ -239,28 +239,29 @@
                                 <div class="service-item">
                                     <i class="fa fa-2x fa-laptop-code mx-auto mb-4"></i>
                                     <h5 class="mb-2">Web Design</h5>
-                                    <p class="mb-0">I develop web pages to take your business to the internet. Made from the design, the layout and then the development.</p>
+                                    <p class="mb-0"> I offer professional web development services with attractive designs and top-notch functionality. Take your online presence to the next level with my assistance!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
                                     <i class="fab fa-2x fa-android mx-auto mb-4"></i>
                                     <h5 class="mb-2">Apps Development</h5>
-                                    <p class="mb-0">I develop medium to high demand web applications according to the client's needs.For both android and iphone devices.</p>
+                                    <p class="mb-0">I specialize in app development and offer innovative solutions to bring your ideas to the digital world.Contact me to discuss your needs and get started on your project.
+                                    </p>                               
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
                                     <i class="fa fa-2x fa-search mx-auto mb-4"></i>
                                     <h5 class="mb-2">SEO</h5>
-                                    <p class="mb-0">I carry out organic positioning of web pages for the most used search engines. Both for pages developed in wordpress and in code.</p>
+                                    <p class="mb-0">I specialize in providing professional SEO services that will help improve your online visibility and drive more traffic to your website.Let's work together to achieve your digital marketing objectives!</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
                                     <i class="fa fa-2x fa-wifi mx-auto mb-4"></i>
                                     <h5 class="mb-2">Computer networks</h5>
-                                    <p class="mb-0">I do data network consulting for small and medium-sized companies, from on-premises infrastructures to cloud infrastructures.</p>
+                                    <p class="mb-0">I am a computer networks specialist, dedicated to providing reliable solutions for seamless connectivity. With extensive experience in designing, implementing, and managing computer networks.</p>
                                 </div>
                             </div>
                         </div>
