Actualizacion de iconos

--- a/index.html
+++ b/index.html
@@ -305,10 +305,10 @@
                                 <div class="row">
                                     <div class="col-12 text-center mb-2">
                                         <ul class="list-inline mb-4" id="portfolio-flters">
-                                            <li class="btn btn-secondary active"  data-filter="*" data-section="portfolio"
-                                            data-value="all"><i class="fa fa-star me-2"></i>All</li>
-                                            <li class="btn btn-secondary" data-filter=".first" data-section="portfolio"
-                                            data-value="development"><i class="fa fa-laptop-code me-2"></i>Development</li>
+                                            <li class="btn btn-secondary active"  data-filter="*" ><i class="fa fa-star me-2" ></i><span data-section="portfolio"
+                                                data-value="all">All</span> </li>
+                                            <li class="btn btn-secondary" data-filter=".first" ><i class="fa fa-laptop-code me-2"></i><span data-section="portfolio"
+                                                data-value="development">Development</span></li>
                                             <li class="btn btn-secondary" data-filter=".second"><i class="fa fa-wifi me-2"></i>Networking</li>
                                         </ul>
                                     </div>
