--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             </div>            
                         </div>
                         <div class="d-flex align-items-end justify-content-between border-top">
-                            <a href="https://drive.google.com/file/d/1g296DgkUq30rtpPIEDhUkmtJC4ruhAQZ/view?usp=sharing" target="_blank" class="btn w-50 border-end" data-section="profile"
+                            <a href="https://docs.google.com/document/d/1yb8ISHo-hSgZKgPmMjsbGo1zw78DLU0o/edit?usp=sharing&ouid=116731930008220632654&rtpof=true&sd=true" target="_blank" class="btn w-50 border-end" data-section="profile"
                             data-value="download">Download CV</a>
                             <a href="#contact" class="btn w-50 btn-scroll" data-section="profile"
                             data-value="contact-me">Contact Me</a>
@@ -180,6 +180,15 @@
                                         <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                                     </div>
                                 </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
+                                        <p class="mb-2">PHP</p>
+                                        <p class="mb-2">85%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="skill mb-4">
@@ -202,6 +211,15 @@
                                 </div>
                                 <div class="skill mb-4">
                                     <div class="d-flex justify-content-between">
+                                        <p class="mb-2">MySQL</p>
+                                        <p class="mb-2">80%</p>
+                                    </div>
+                                    <div class="progress">
+                                        <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
+                                    </div>
+                                </div>
+                                <div class="skill mb-4">
+                                    <div class="d-flex justify-content-between">
                                         <p class="mb-2">Networking</p>
                                         <p class="mb-2">85%</p>
                                     </div>
@@ -216,7 +234,6 @@
                         </div>
                     </section>
                     <!-- Skills End -->
-
                     <!-- Expericence Start -->
                     <section class="py-5 wow fadeInUp" data-wow-delay="0.3s">
                         <h1 class="title pb-3 mb-5" data-section="menu" data-value="experience">Experience</h1>
@@ -298,7 +315,7 @@
                     <!-- Services End -->
 
                     <!-- Portfolio Start -->
-                    <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s" >
+                    <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.3s" id="portfolio">
                         <h1 class="title pb-3 mb-5">Portfolio</h1>
                         <div class="row">
                             <div class="col-12">
@@ -383,7 +400,7 @@
                     <!-- Portfolio End -->
 
                     <!-- Contact Start -->
-                    <section class="py-5 wow fadeInUp" data-wow-delay="0.6s" id="contact" >
+                    <section class="py-5 wow fadeIn" data-wow-delay="0.8s" id="contact" >
                         <h1 class="title pb-3 mb-5" data-section="contact"
                         data-value="title">Contact Me</h1>
 						<p class="mb-4" data-section="contact"
